--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,4 @@
-name: astrbot_plugin_ignore_at
-desc: 默认无视@所有人
+name: astrbot_plugin_ignore_VX
+desc: 微信默认无视@所有人
 help: ignore_at_on打开拦截，ignore_at_off关闭拦截
 
